# pitrix2

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  extlib_makefile  inc_list.config  link_makefile  make.config  makeall.sh  makefile  mod_makefile  readme
app/label/: disp.lua
app/netinfo/: disp.lua  setup.lua
app/time/: disp.lua
app/weather/: disp.lua  setup copy.lua  setup.lua
core/: CMakeLists.txt  config.h  pitrix_config.h
core/extlib/: CMakeLists.extlib.tostatic  CMakeLists.txt  build.sh  lua_import.c  makefile
core/extlib/cJSON/: makefile
core/extlib/gpio/: gpio.c  gpio.h  makefile
core/extlib/lua-cjson/: Makefile  lua_cjson.c
core/extlib/lvgl/: Makefile  lv_conf.h  makefile
core/extlib/patch/: luavgl-v0.1.0.patch
core/extlib/rpi_ws281x-1.0.0/: CMakeLists.txt
core/modules/: CMakeLists.txt
core/modules/graph/: TomThumb.h  graph.c  graph.h  graph_priv.c  graph_priv.h
core/modules/key_handle/: key_handle.c  key_handle.h
core/modules/log/: log.c  log.h
core/modules/network/: CMakeLists.txt  network.c  network.h  network_priv.c  network_priv.h  urlparser.c  urlparser.h
core/modules/render/: lv_adapter.c  lv_adapter.h  render.c  render.h
core/modules/simple-bmp/: makefile  simple_bmp.c  simple_bmp.h  simple_bmp_priv.c  simple_bmp_priv.h
core/sys/: CMakeLists.txt  makefile
core/sys/launcher/: config_handler.c  config_handler.h  menu.c  menu.h
core/sys/main/: main.c  makefile
test/hardware/: key.c
test/lua/: load_script.c
test/lvgl/: img_example.c  style_example.c
test/network/: test.c
(+14 files in other folders)
